src/metrics/snapshots/big_code_analysis__metrics__npa__tests__python_class_level_multi_target_counts_each_name.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 5,
  "interface_npa_sum": 0,
  "class_attributes": 5,
  "interface_attributes": 0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 5,
  "total_attributes": 5,
  "cda": 1.0
}
