src/metrics/snapshots/big_code_analysis__metrics__npa__tests__python_module_level_assignments_not_attributes.snap
---
source: src/metrics/npa.rs
assertion_line: 2669
expression: metric.npa
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_attributes": 1.0,
  "interface_attributes": 0.0,
  "classes_average": 1.0,
  "interfaces_average": null,
  "total": 1.0,
  "total_attributes": 1.0,
  "average": 1.0
}
