src/metrics/snapshots/big_code_analysis__metrics__npa__tests__ruby_mixed_attributes_and_assignments.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 4,
  "interfaces": 0,
  "class_attributes": 4,
  "interface_attributes": 0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 4,
  "total_attributes": 4,
  "cda": 1.0
}
