src/metrics/snapshots/big_code_analysis__metrics__npa__tests__rust_empty_struct_body_has_no_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 0,
  "interfaces": 0,
  "class_attributes": 0,
  "interface_attributes": 0,
  "class_cda": 0.0,
  "interface_cda": 0.0,
  "total": 0,
  "total_attributes": 0,
  "cda": 0.0
}
